# openfisca-core

./: .coverage  .gitignore  .noseids  .project  .pydevproject  .test_durations  .travis.yml  1  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  PR_DESCRIPTION.md  README  README.fr  README.md  README.txt  STYLEGUIDE.md  changelog.yaml  changelog_entry.yaml  check-version-bump.sh  circle.yml  conda_build_config.yaml  conftest.py  coverage.xml  deploy-if-version-bump.sh  noxfile.py  openfisca_bot.enc  pr_body.txt  publiccode.yml  pyproject.toml  release-tag.sh  requirements.txt  setup.cfg  setup.py  tasks.py  test_dpath.py  test_out.txt  (+4 more)
.circleci/: check-version-bump.sh  config.yml  deploy-python-2.sh  deploy-python-3.sh  detect-functional-changes.sh  has-functional-changes.sh  version-change-triggers.sh
.conda/: README.md  meta.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  changelog_template.md  dependabot.yml  get-changelog-diff.sh  get-numpy-version.py  get_pypi_info.py  has-functional-changes.sh  is-version-number-acceptable.sh  publish-git-tag.sh
api-prod/: deploy.sh  openfisca-web-api.service
benchmarks/: README.md  conftest.py  test_bench_asof.py  test_bench_compute.py  test_bench_memory.py
conda/: meta.yaml
doc/: Makefile  README.md  README.txt  conf.py  contributing.rst  france.rst  index.rst  make.py  requirements.txt  survey.rst  testcase.rst  whatsnew.rst
docs/: _config.yml  _toc.yml  development-process.md  gnu-linux-debian.md  intro.md  issues.md  microsoft-windows.md  reforms.md  release-process.md  tests.md
openfisca_cli/: commands.py
openfisca_core/: __init__.py  accessors.py  axestools.py  baremes.py  base_functions.py  cache.py  caching.py  calmar.py  codeparsers.py  columns.py  commons.py  conv.py  data_storage.py  datatables.py  decompositions.py  decompositionsxml.py  descriptions.py  entities.py  enumerations.py  errors.py  formula_helpers.py  (+36 more)
(+1308 files in other folders)
