[metadata]
name = OpenFisca-Core
version = 35.5.5
author = OpenFisca Team
author_email = contact@openfisca.org
license = https://www.fsf.org/licensing/licenses/agpl-3.0.html
license_files = file: LICENSE
url = https://github.com/openfisca/openfisca-core
keywords = benefit, microsimulation, social, tax
description = A versatile microsimulation free software
long_description = file: README.md, CONTRIBUTING.md, STYLEGUIDE.md, CHANGELOG.md
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    openfisca = openfisca_core.scripts.openfisca_command:main
    openfisca-run-test = openfisca_core.scripts.openfisca_command:main

[coverage:run]
disable_warnings = module-not-measured

[flake8]
# E128/133:     We prefer hang-closing visual indents.
# E251:         We prefer `function(x = 1)` over `function(x=1)`.
# E501:         We do not enforce a maximum line length.
# F403/405:     We ignore * imports.
# W503/504:     We break lines before binary operators (Knuth's style).
hang-closing    = true
ignore          = E128,E251,F403,F405,E501,W503,W504
in-place        = true
rst-roles       = any, class, exc, meth, obj
rst-directives  = attribute

[tool:pytest]
addopts         = --showlocals --doctest-modules --disable-pytest-warnings
testpaths       = tests
python_files    = **/*.py

[mypy]
ignore_missing_imports = True

[mypy-openfisca_core.scripts.*]
ignore_errors = True
